; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_remote_transaction.c_RemoteTransactionBeginIfNecessary.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_remote_transaction.c_RemoteTransactionBeginIfNecessary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RemoteTransactionBeginIfNecessary(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i64 (...) @InCoordinatedTransaction()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @list_make1(i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @RemoteTransactionsBeginIfNecessary(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @list_free(i32* %11)
  br label %13

13:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @InCoordinatedTransaction(...) #1

declare dso_local i32* @list_make1(i32*) #1

declare dso_local i32 @RemoteTransactionsBeginIfNecessary(i32*) #1

declare dso_local i32 @list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
